Fixing print scroll bug on safari

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -12,16 +12,16 @@
         display: -webkit-flex;
     }
 
-    .column {
-        flex: 50%;
-    }
+    // .column {
+    //     flex: 50%;
+    // }
 }
 
 .print-container {
     margin: 1 auto;
     max-height: 700px;
     max-width: 500px;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .prints img {
